[package]
name = "merge-junit"
version = "0.1.4"
authors = ["Tobias Nilsson <tobias.jens.nilsson@gmail.com>"]
license = "Unlicense"
description = "CLI utility to merge JUnit compliant XML documents into a single XML document."
readme = "README.md"
homepage = "https://github.com/tobni/merge-junit"
repository = "https://github.com/tobni/merge-junit"
keywords = ["cli", "junit", "xml", "report"]
categories = ["command-line-utilities", "text-processing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "^0.23"
anyhow = "^1.0"
clap = { version = "^4.1.4", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "^2.0"
assert_fs = "^1.0"
predicates = "^2.1"